--- a/agriapps/css/style.css
+++ b/agriapps/css/style.css
@@ -2,169 +2,51 @@
  *  ユーザCSS
  * */
 
-
 .container {
+  font-size: x-large;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: 0px;
+  margin-left: 0px;
   width: 100%;
 }
-
-
 /* 背景色 */
 .strong-green-literal-white{
   background-color: #003B00;
   color: #ffffff;
   text-align: center;
-  padding: 1em 0.5em;
+  padding: 40px 20px;
 }
 .white-literal-strong-green{
   background-color: #ffffff;
   color: #003B00;
   text-align: center;
-  padding: 1em 0.5em;
+  padding: 40px 20px;
+
 }
 .light-green-literal-white{
   background-color: #005900;
   color: #ffffff;
   text-align: center;
-  padding: 1em 0.5em;
+  padding: 40px 20px;
 }
 .white-literal-light-green{
   background-color: #ffffff;
   color: #005900;
   text-align: center;
-  padding: 1em 0.5em;
+  padding: 40px 20px;
 }
 
 .white-green-literal-white{
   background-color: #23B04A;
   color: #ffffff;
   text-align: center;
-  padding: 1em 0.5em;
+  padding: 40px 20px;
 }
-
-/* navbar 全体の背景色とボーダーカラー */
-.navbar-default {
-  background-color: #6b8e23;
-  border-color: #6b8e23;
-}
-/* navbar テキストカラー */
-.navbar-default .navbar-nav > li > a {
-color: #ffffff;
-}
-
-
-/* navbar hover,focus時のテキストカラー */
-/*
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-color: #26534c;
-background-color: transparent;
-}
-/* navbar active設定時のカラー */
-/*
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:focus,
-.navbar-default .navbar-nav>.active>a:hover {
-color: #26534c;
-background-color: #c3ede7;
-}
-/* navbar ドロップダウン(親)のカラー */
-/*
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.open>a:focus,
-.navbar-default .navbar-nav>.open>a:hover {
-color: #3e6962;
-background-color: #c3ede7;
-}
-/* navbar ドロップダウン(子)のボックスカラー */
-/*
-.dropdown-menu {
-background-color: #65baad;
-border: 1px solid #3e6962;
-border: 1px solid #3e6962(0, 0, 0, .15);
--webkit-box-shadow: 0 6px 12px rgba(94, 136, 129, 0.35);
-box-shadow: 0 6px 12px rgba(94, 136, 129, 0.35);
-}
-/* navbar ドロップダウン(子)テキストカラー */
-/*
-.dropdown-menu>li>a {
-color: #ffffff;
-}
-/* navbar ドロップダウン(子)focus,hover時のカラー */
-/*
-.dropdown-menu>li>a:focus,
-.dropdown-menu>li>a:hover {
-color: #26534c;
-background-color: #c3ede7;
-}
-/* navbar ドロップダウン(子)内の区切り線(class=”divider”)のカラー */
-/*
-.dropdown-menu .divider {
-background-color: #3e6962;
-}
-/* navbar 画面サイズ767px以下の時のカラー */
-/*
-@media (max-width:767px) {
-.navbar-default .navbar-nav .open .dropdown-menu>li>a {
-color: #ffffff;
-}
-.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus,
-.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
-color: #26534c;
-background-color: transparent;
-}
-/* ドロップダウンactive設定時のカラー */
-/*
-.navbar-default .navbar-nav .open .dropdown-menu>.active>a,
-.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus,
-.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover {
-color: #ffb163;
-background-color: #d4ede9;
-}
-}
-/* navbar ハンバーガー四角枠 */
-/*
-.navbar-default .navbar-toggle {
-border-color: #ffffff;
-}
-/* navbar ハンバーガー三本線 */
-
-.navbar-default .navbar-toggle .icon-bar {
+.white-literal-black{
   background-color: #ffffff;
+  color: #000000;
 }
-/* navbar ハンバーガーボタン,タップとホバーした時の背景色 */
-
-.navbar-default .navbar-toggle:focus,
-.navbar-default .navbar-toggle:hover {
-  background-color: #ffffff;
-}
-/* navbar ハンバーガーボタン,タップとホバーした時の四角枠 */
-
-.navbar-default .navbar-toggle:focus,
-.navbar-default .navbar-toggle:hover {
-  border-color: #ffffff;
-}
-/* navbar ハンバーガーボタン,タップとホバーした時の三本線 */
-/*
-.navbar-default .navbar-toggle:focus > .icon-bar,
-.navbar-default .navbar-toggle:hover > .icon-bar {
-background-color: #65baad;
-}
-*/
-
-
-/* navbar Brandのカラー 
- * */
-.navbar-default .navbar-brand {
-  color: #ffffff;
-  font-weight: bold;
-}
-
-.navbar-default .navbar-brand:focus,
-.navbar-default .navbar-brand:hover {
-  color: #ffffff;
-  background-color: transparent;
-}
-
 /* テーブル系 */ 
 .table-back {
   background-color: #ddffdd;
@@ -190,6 +72,10 @@ table, tbody, tr, td, th{
   vertical-align: middle !important;
 }
 
+.twinleaf {
+  text-align: center;
+
+}
 
 footer {
   color: gray;
